<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Button">

    <Button
        android:id="@+id/Button"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:layout_marginTop="222dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_MateriButton"
        android:textColor="#FCF7F7"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/kembali"
        app:layout_constraintTop_toTopOf="@+id/isiButton"
        tools:layout_editor_absoluteX="270dp" />

    <TextView
        android:id="@+id/Button"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:text="@string/Text_Button"
        android:textColor="#FCF7F7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/isiButton"
        app:layout_constraintEnd_toEndOf="@+id/isiButton"
        app:layout_constraintStart_toStartOf="@+id/isiButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isiButton"
        android:layout_width="391dp"
        android:layout_height="113dp"
        android:gravity="center"
        android:text="@string/Text_IsiButton"
        android:textColor="#F8F5F5"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="143dp" />

    <Button
        android:id="@+id/contoh_Syntax"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:layout_marginTop="222dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_SyntaxButton"
        android:textColor="#F5EFF1"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/kembali"
        app:layout_constraintTop_toTopOf="@+id/isiButton"
        tools:layout_editor_absoluteX="34dp" />

    <Button
        android:id="@+id/Kembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_KembaliButton"
        android:textColor="#F7EEEF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="171dp" />
</androidx.constraintlayout.widget.ConstraintLayout>