<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Class">

    <Button
        android:id="@+id/Link_Materi"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="76dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_MateriClass"
        android:textColor="#FCF7F7"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Contoh_Syntax"
        app:layout_constraintTop_toBottomOf="@+id/IsiClass" />

    <TextView
        android:id="@+id/Class"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:text="@string/Text_Class"
        android:textColor="#F5F3F3"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="165dp"
        tools:layout_editor_absoluteY="53dp" />

    <TextView
        android:id="@+id/IsiClass"
        android:layout_width="296dp"
        android:layout_height="79dp"
        android:gravity="center"
        android:text="@string/Text_IsiClass"
        android:textColor="#F8F5F5"
        app:layout_constraintEnd_toEndOf="@+id/Class"
        app:layout_constraintStart_toStartOf="@+id/Class"
        tools:layout_editor_absoluteY="160dp" />

    <Button
        android:id="@+id/contoh_Syntax"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:layout_marginStart="56dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_SyntaxClass"
        android:textColor="#F5EFF1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/Link_Materi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Link_Materi"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Kembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="116dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_KembaliClass"
        android:textColor="#F7EEEF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Link_Materi"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/Contoh_Syntax" />
</androidx.constraintlayout.widget.ConstraintLayout>