<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Commen">

    <Button
        android:id="@+id/link_Materi"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:layout_marginTop="104dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_MateriCommen"
        android:textColor="#FCF7F7"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toEndOf="@+id/contoh_Syntax"
        app:layout_constraintTop_toBottomOf="@+id/isiCommen" />

    <TextView
        android:id="@+id/Commen"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:text="@string/Text_Commen"
        android:textColor="#FCF7F7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/isiCommen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isiCommen"
        android:layout_width="391dp"
        android:layout_height="113dp"
        android:gravity="center"
        android:text="@string/Text_IsiCommen"
        android:textColor="#F8F5F5"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="150dp" />

    <Button
        android:id="@+id/contoh_Syntax"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:layout_marginStart="52dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_SyntaxCommen"
        android:textColor="#F5EFF1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/link_Materi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/link_Materi"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Kembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_KembaliCommen"
        android:textColor="#F7EEEF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/link_Materi"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/contoh_Syntax" />
</androidx.constraintlayout.widget.ConstraintLayout>