<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".String">

    <Button
        android:id="@+id/link_Materi"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_MateriString"
        android:textColor="#FCF7F7"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/isiString"
        tools:layout_editor_absoluteY="347dp" />

    <TextView
        android:id="@+id/String"
        android:layout_width="128dp"
        android:layout_height="42dp"
        android:text="@string/Text_Commen"
        android:textColor="#FCF7F7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/isiString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isiString"
        android:layout_width="391dp"
        android:layout_height="113dp"
        android:layout_marginBottom="84dp"
        android:gravity="center"
        android:text="@string/Text_IsiString"
        android:textColor="#F8F5F5"
        app:layout_constraintBottom_toTopOf="@+id/link_Materi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/contoh_Syntax"
        android:layout_width="96dp"
        android:layout_height="39dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_SyntaxString"
        android:textColor="#F5EFF1"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/link_Materi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/link_Materi"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/Kembali"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="96dp"
        android:backgroundTint="#2196F3"
        android:text="@string/Tombol_KembaliString"
        android:textColor="#F7EEEF"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/link_Materi"
        app:layout_constraintHorizontal_bias="0.017"
        app:layout_constraintStart_toEndOf="@+id/contoh_Syntax" />
</androidx.constraintlayout.widget.ConstraintLayout>